# AUV-AIAPAEC-Simulator

./: README.md
GZ_Simulator/: README.md
GZ_Simulator/src/aiapaec_models/: CMakeLists.txt  package.xml  setup.bash
GZ_Simulator/src/aiapaec_models/models/Coast Waves 2/: model.sdf
GZ_Simulator/src/aiapaec_models/models/aiapaec/: model.config  model.sdf
GZ_Simulator/src/aiapaec_models/models/aiapaec/meshes/: thruster1.stl  thruster2.stl  thruster3.stl
GZ_Simulator/src/aiapaec_models/models/axes/: model.sdf
GZ_Simulator/src/aiapaec_models/models/sand_heightmap/: model.sdf
GZ_Simulator/src/aiapaec_models/worlds/: aiapaec_underwater.world
GZ_Simulator/src/gz_transport_dvl/: CMakeLists.txt  dvl_bridge.cc  time_bridge.cc
GZ_Simulator/src/ros_pkg_aplication/: package.xml  setup.cfg  setup.py
GZ_Simulator/src/ros_pkg_bringup/: CMakeLists.txt  package.xml
PyAUVsimulator/: main.py
PyAUVsimulator/Non-linear_model_parameters/: added_mass.py  constants.py  drag.py  lift_body_flap.py  parameters1.py
PyAUVsimulator/lib/: __init__.py  constants.py  constants_funtions.py  design_lineal_constans.py  main_loop.py
PyAUVsimulator/lqg_control/: __init__.py  a_ctrl_obs_eigen.py  b_unscaled_modal.py  c_scaling_matrix.py  d_Freq_resp.py  e_aument_plant.py  f_Kalman_Filter.py  g_poles_open_loop.py  h_compensator.py  i_OL_CL.py  j_SR_CL.py  k_ACL_SR.py  l_CS_KS.py  m_CLS.py  n_Real_OL_CL.py  o_Real_Control.py  p_discrete_control.py
PyAUVsimulator/non_linear_model/: __init__.py  check_ctrl_obs.py  non_linear_model.py  output_graphs_code.py  system_linearization.py
PyAUVsimulator/non_linear_model_parameters/: createfigure.py  radio.py
PyAUVsimulator/real_state_space_and_discretized_control/: discrete_control_Ts_0.1.py  discrete_control_Ts_1.py  real_controller_data.py
(+18 files in other folders)
