<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>aiapaec_models</name>
  <version>0.6.0</version>
  <description>Model of AUV that runs in Gazebo Harmonic with ROS2 Iron</description>

  <maintainer email="jcutipalu@unsa.edu.pe">Juan Cutipa</maintainer>
  <maintainer email="dhuallpaa@unsa.edu.pe">Diana Huallpa</maintainer>
  <maintainer email="kluquegu@unsa.edu.pe">Kevin Luque</maintainer>
  
  <license>GPL-3</license> 
  
  <author>Juan Cutipa</author>
  <author>Diana Huallpa</author>
  <author>Kevin Luque</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
